# InteractiveGearProg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  SECURITY_NOTES.md  compose.yml  index.html  ladlor-api.service  package-lock.json  package.json  todo.md  vite.config.js
.github/workflows/: build_items_json.yml  deploy.yml  goatcounter.yml  items_compiler.yml  validate_milestone_metadata.yml
assets/: index-4T1B6GcC.css  index-5E52Bi0o.js  index-BTk79rzE.js  index-BVqPDlMi.js  index-DTYQmco8.js  index-NC_UodWx.js
backend/: .env.example  .render-buildpacks.json  Dockerfile  README.md  TEST_PRIORITIES.md  compose.prod.yaml  compose.test.yaml  compose.yaml  db.py  discord_bot.py  endpoint_hits.sql  endpoint_hits_daily.sql  heartbeat.timer  heartbeat_ping.sh  main.py  milestones.py  milestones_completed_snapshots.sql  pyproject.toml  requirements.txt  schema.sql  shares.sql
backend/bot/: __init__.py  annotation_commands.py  metrics_commands.py  milestone_commands.py  moderation_commands.py  report_logs.py
backend/tests/: conftest.py  test_api_guardrails.py  test_api_routes.py  test_db_integration.py  test_live_api.py
data/: bank.json  changelog.json  filter.json  invocations.json  items.json  items_auto.json  retirement.json  sequence.json  slayer_rewards.csv
data/contents/: changelog.json  faq.json
data/logic/: common-aliases.json  milestone-ids.json  milestone-sequence-main.json  milestone-sequence-retirement.json  retirement.json  sequence.json  temp
discord_bot/: main.py  pyproject.toml  schema.sql
docs/: backend-deployment.md  backend-reference.md  backend-setup.md  backend-testing.md  cloudflared-bootstrapping.md  postgresql-bootstrapping.md  scythe.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: _redirects
frontend/src/: main.jsx
infra/: README.md
infra/cloudflared/: config.local.yml  config.prod.yml  config.test.yml  config.yml
infra/systemd/: ladlor-api-healthcheck.service  (+6 more)
osrs_milestone_metadata/: README.md  pyproject.toml
osrs_milestone_metadata/osrs_milestone_metadata/: __init__.py  cli.py  client.py
osrs_milestone_metadata/tests/: test_integration.py
osrswiki_images/: README.md  pyproject.toml
osrswiki_images/osrswiki_images/: client.py
osrswiki_images/tests/: test_integration.py
pages/: 98-agility.html  bank.html  bare-bones.html  changelog.html  faq.html  invocations.html  privacy.html  reddit-thumbnail.html
react-rewrite/: index.html  package-lock.json  package.json  vite.config.js
scripts/: invocations.js  pagecount.js  query_wiki_api.py  render-bank.js  render-items-bare-bones.js  render-items.js  right-clicks.js  test_query_wiki_api.py  version.js
src/: main.jsx
styles/: bank.css  changelog.css  chart.css  context-menu.css  faq.css  invocations.css  right-click.css  style.css  styles.css  theme.css
tools/: bare_bones.py  build_items_json.py  dps.py  generate_milestone_metadata.py  goatcounter.py  initialize_bank_header.py  pyproject.toml
(+93 files in other folders)
