[project]
name = "osrs-milestone-metadata"
version = "0.1.4"
description = "OSRS Wiki resolvers for wiki and image URLs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "backoff>=2.2.1",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
osrs-milestone-metadata = "osrs_milestone_metadata.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osrs_milestone_metadata"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
