[project]
name = "osrswiki-images"
version = "0.1.4"
description = "OSRS Wiki resolvers for wiki and image URLs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "backoff>=2.2.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[project.scripts]
osrswiki-images = "osrswiki_images.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osrswiki_images"]
