[project]
name = "interactive-gear-tools"
version = "0.1.0"
description = "Repo maintenance scripts for data generation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "osrswiki-images>=0.1.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pydantic"
]

[tool.uv.sources]
osrswiki-images = { path = "../osrswiki_images", editable = true }
